<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.baidu.duer.chinatalk_refactor.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_exam"
        android:name="com.baidu.duer.chinatalk_refactor.ui.exam.ExamFragment"
        android:label="@string/title_exam"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.baidu.duer.chinatalk_refactor.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />
</navigation>